// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPricePerPeriodAndRatingMarkup if \`isShowingPlaceholder\` === true should return the correct structure 1`] = `
<div>
  <div
    className="placeholder-wrapper"
  >
    <TextPlaceholder
      isFluid={true}
      length="medium"
    >
      <div
        className="placeholder text medium fluid"
      />
    </TextPlaceholder>
    <TextPlaceholder
      isFluid={true}
      length="short"
    >
      <div
        className="placeholder text short fluid"
      />
    </TextPlaceholder>
  </div>
</div>
`;

exports[`getPricePerPeriodAndRatingMarkup if \`ratingNumber\` is falsy should return the right markup 1`] = `
<div>
  <Segment>
    <div
      className="ui segment"
    >
      <span>
        from 
        <Heading
          className={null}
          hasMargin={true}
          isColorInverted={false}
          size="small"
          textAlign={null}
        >
          <Header
            as="h4"
            className=""
            inverted={false}
            textAlign={null}
          >
            <h4
              className="ui header"
            >
              280$
            </h4>
          </Header>
        </Heading>
        wooble
      </span>
    </div>
  </Segment>
</div>
`;

exports[`getPricePerPeriodAndRatingMarkup if \`ratingNumber\` is truthy should return the right markup 1`] = `
<div>
  <Segment>
    <div
      className="ui segment"
    >
      <span>
        from 
        <Heading
          className={null}
          hasMargin={true}
          isColorInverted={false}
          size="small"
          textAlign={null}
        >
          <Header
            as="h4"
            className=""
            inverted={false}
            textAlign={null}
          >
            <h4
              className="ui header"
            >
              280$
            </h4>
          </Header>
        </Heading>
        wooble
      </span>
    </div>
  </Segment>
  <Segment
    className="is-rating"
  >
    <div
      className="ui segment is-rating"
    >
      <Rating
        iconSize="tiny"
        isShowingNumeral={true}
        ratingNumber={1}
      >
        1
        <Rating
          clearable="auto"
          disabled={true}
          maxRating={5}
          rating={1}
          size="tiny"
        >
          <div
            className="ui tiny disabled rating"
            onMouseLeave={[Function]}
            role="radiogroup"
          >
            <RatingIcon
              active={true}
              aria-checked={true}
              aria-posinset={1}
              aria-setsize={5}
              as="i"
              index={0}
              key="0"
              onClick={[Function]}
              onMouseEnter={[Function]}
              selected={false}
            >
              <i
                aria-checked={true}
                aria-posinset={1}
                aria-setsize={5}
                className="active icon"
                onClick={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                role="radio"
                tabIndex={0}
              />
            </RatingIcon>
            <RatingIcon
              active={false}
              aria-checked={false}
              aria-posinset={2}
              aria-setsize={5}
              as="i"
              index={1}
              key="1"
              onClick={[Function]}
              onMouseEnter={[Function]}
              selected={false}
            >
              <i
                aria-checked={false}
                aria-posinset={2}
                aria-setsize={5}
                className="icon"
                onClick={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                role="radio"
                tabIndex={0}
              />
            </RatingIcon>
            <RatingIcon
              active={false}
              aria-checked={false}
              aria-posinset={3}
              aria-setsize={5}
              as="i"
              index={2}
              key="2"
              onClick={[Function]}
              onMouseEnter={[Function]}
              selected={false}
            >
              <i
                aria-checked={false}
                aria-posinset={3}
                aria-setsize={5}
                className="icon"
                onClick={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                role="radio"
                tabIndex={0}
              />
            </RatingIcon>
            <RatingIcon
              active={false}
              aria-checked={false}
              aria-posinset={4}
              aria-setsize={5}
              as="i"
              index={3}
              key="3"
              onClick={[Function]}
              onMouseEnter={[Function]}
              selected={false}
            >
              <i
                aria-checked={false}
                aria-posinset={4}
                aria-setsize={5}
                className="icon"
                onClick={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                role="radio"
                tabIndex={0}
              />
            </RatingIcon>
            <RatingIcon
              active={false}
              aria-checked={false}
              aria-posinset={5}
              aria-setsize={5}
              as="i"
              index={4}
              key="4"
              onClick={[Function]}
              onMouseEnter={[Function]}
              selected={false}
            >
              <i
                aria-checked={false}
                aria-posinset={5}
                aria-setsize={5}
                className="icon"
                onClick={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                role="radio"
                tabIndex={0}
              />
            </RatingIcon>
          </div>
        </Rating>
      </Rating>
    </div>
  </Segment>
</div>
`;
